arrumar bugs, excluir arquivo repetido e adicionar css no login

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
   <link rel="stylesheet" href="feed.css">
 </head>
 <body>
-  <main class='main'>  
-  </main>  
-  <script type="module" src="./main.js"></script>
-</body>
+  <div class="img-background">
+    <main>  
+    </main>  
+    <script type="module" src="./main.js"></script>
+  </div>
+  </body>
 </html>
