adicionar mais css no feed

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,13 @@
   <link rel="stylesheet" href="feed.css">
 </head>
 <body>
-  <div class="img-background">
-    <main>  
-    </main>  
+  <div id="img-background" class="img-background">
+  <main>  
+  </main>  
+</div>
     <script type="module" src="./main.js"></script>
-  </div>
   </body>
 </html>
+
+
+
